examples/ingress/name-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: cis-fqdn-based-routing
 namespace: default
 annotations:
  # Provide an IP address for the BIG-IP Virtual Server.
  virtual-server.f5.com/ip: "10.1.10.50"
  # BIG-IP partition
  virtual-server.f5.com/partition: "k8s"
  # Load balancing algorithm
  virtual-server.f5.com/balance: "round-robin"
  # Specify the port you want to handle requests
  virtual-server.f5.com/http-port: "80"
spec:
 # Provide the IngressClassName as "f5"
 ingressClassName: f5
 rules:
 # URL
 - host: app1.f5demo.local
   http:
     # path to Service from URL
     paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: app1-svc
             port:
               number: 80
 # URL
 - host: app2.f5demo.local
   http:
     # path to Service from URL
     paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: app2-svc
             port:
               number: 80
