examples/ingress/url-rewrite-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-rewrite-ingress
  annotations:
    # Provide an IP address for the BIG-IP Virtual Server.
    virtual-server.f5.com/ip: 10.1.10.50
    # rewrite-target-url annotation will redirect any traffic for "http://foo.com/foo" to "bar.com/bar"
    virtual-server.f5.com/rewrite-target-url: lab.f5demo.local/mylab=laboratory.f5demo.local/mylaboratory
spec:
  # Provide the IngressClassName as "f5"
  ingressClassName: f5
  rules:
    - host: lab.f5demo.local
      http:
        paths:
          - backend:
              service:
                name: app2-svc
                port:
                  number: 80
            path: /mylab
            pathType: Prefix
